# robot_ws

./: .gitignore  .gitmodules  README.md  git_push.sh  pull.sh
src/: modify_log.md
src/Delta_2B_ros/: package.xml
src/Delta_2B_ros/launch/: delta_2b_lidar.launch  view_delta_2b_lidar.launch
src/aruco_ros/aruco_ros/src/: simple_single.cpp
src/autolabor_pro1/autolabor_keyboard_control/: CMakeLists.txt
src/autolabor_pro1/autolabor_pro1_description/: CMakeLists.txt  package.xml
src/autolabor_pro1/autolabor_pro1_description/urdf/: autolabor_pro1_track_suit.urdf
src/autolabor_pro1/autolabor_pro1_driver/: CMakeLists.txt
src/autolabor_pro1/autolabor_pro1_driver/launch/: driver.launch  keyboard_move.launch
src/autolabor_pro1/autolabor_pro1_driver/src/: autolabor_driver.cpp
src/autolabor_pro1/autolabor_pro1_driver/srv/: UpdateOdom.srv
src/base_control/: CMakeLists.txt  package.xml
src/base_control/scripts/: server_f.py
src/base_control/src/: main.cpp
src/camera_driver/: CMakeLists.txt  package.xml
src/camera_driver/calibration_file/: 1.yaml~
src/camera_driver/include/: image_transpose.h
src/camera_driver/launch/: camera_driver.launch  my_image_transport.launch  my_image_transport1.launch~
src/camera_driver/scripts/: .gitignore  result.avi
src/camera_driver/src/: my_publisher.cpp
src/drivers/camera_driver/calibration_file/: 1.yaml  2.yaml
src/drivers/camera_driver/launch/: camera_driver.launch
src/drivers/camera_driver/scripts/: show_image.py
src/drivers/camera_driver/src/: camera_driver.cpp
src/drivers/fslidar/: CMakeLists.txt
src/drivers/fslidar/launch/: display.launch  fslidar.launch
src/drivers/keyboard_control/: CMakeLists.txt  package.xml
src/drivers/keyboard_control/launch/: keyboard.launch
src/drivers/mpu6050_driver/: CMakeLists.txt  package.xml
src/drivers/mpu6050_driver/launch/: demo.launch  imu_filter.launch  rviz.launch
src/drivers/triwheel_robot_driver/: package.xml
src/drivers/triwheel_robot_driver/launch/: robot_driver.launch  robot_keyboard.launch
src/drivers/triwheel_robot_driver/scripts/: send.py
src/drivers/triwheel_robot_driver/src/: README.md  record.cpp  robot_driver.cpp
src/generate_goals/: CMakeLists.txt  README.md  package.xml
src/generate_goals/launch/: generate_goals.launch
src/generate_goals/src/: generate_goals_node.cpp
src/keyboard_control/: package.xml  readme.md
src/keyboard_control/launch/: keyboard.launch
src/keyboard_control/src/: keyboard_control_node.cpp
src/lib/can2serial/: CMakeLists.txt  package.xml
src/lib/can2serial/src/: can2serial.cpp
src/mpu6050_driver/: CMakeLists.txt  package.xml
src/mpu6050_driver/launch/: demo.launch  imu_filter.launch  mpu6050.launch  mup6050.launch
src/mpu6050_driver/src/: JY901.h  mpu6050_driver (copy).cpp  mpu6050_driver.cpp
src/nav_goals/: CMakeLists.txt  README.md  package.xml
src/nav_goals/launch/: generate_goals.launch  goal_transmiter.launch
src/nav_goals/rviz/: config.rviz
src/nav_goals/src/: generate_goals_node.cpp  goal_transmiter_node.cpp
src/qrcode_detect/: CMakeLists.txt  README.md  package.xml
src/qrcode_detect/cfg/: camera.yaml
src/qrcode_detect/launch/: detect.launch
src/remote_control/: CMakeLists.txt  package.xml  remote_control_server.py
src/remote_control/LAN_app/robot_control/: mainwindow.cpp  mainwindow.h
src/remote_control/app/: .gitignore
src/remote_control/app/robot_control/: mainwindow.cpp  mainwindow.h  mainwindow.ui  (+1 more)
src/remote_control/launch/: wan_control.launch
src/remote_control_/WAN/: wan_node.cpp
src/robot_control/: CMakeLists.txt  package.xml
src/robot_control/script/: remote_control.py
src/robot_control/src/: keyboard_control_node.cpp
src/robot_keyboard_control/: CMakeLists.txt  README.md  package.xml
src/robot_keyboard_control/include/robot_keyboard_control/: keyboard_control_node.h
src/robot_keyboard_control/src/: keyboard_control_node.cpp
src/robot_nav/: CMakeLists.txt  mem.cpp  mem.md  package.xml
src/robot_nav/launch/: amcl.launch  amcl1.launch  ctrl_wan.launch  move_base.launch  move_base1.launch  nav.launch  nav_local.launch  nav_remote.launch  nav_wan.launch  robot_nav.launch  rplidar.launch  wan_control.launch
src/robot_nav/rviz/: autolabor_cartographer.rviz  gmapping.rviz  nav.rviz
src/robot_odometry/: CMakeLists.txt  package.xml
src/robot_odometry/launch/: odom_fused.launch  robot_pose_ekf.launch
src/rviz_imu_plugin/: package.xml  plugin_description.xml
src/sensors/: package.xml
src/sensors/camera_driver/: CMakeLists.txt  README.md  package.xml
src/sensors/camera_driver/calibration_file/: demo.yaml
src/sensors/camera_driver/launch/: camera_driver.launch  publishCameraInfo.launch  raw_display.launch  test.launch
src/sensors/camera_driver/src/: camera_driver.cpp  publish_cameraInfo.cpp
src/sensors/fslidar/: package.xml
src/sensors/launch/: fslidar.launch  rplidar.launch
src/simulations/: README.txt
src/simulations/mbot_navigation/: README.md
src/slam/: CMakeLists.txt  package.xml  readme.md
src/slam/launch/: autolabor_cartographer.launch  autolabor_gmapping.launch  cartographer.launch  gmapping.launch  gmapping_demo.launch  gmapping_remote.launch  laser_scan_matcher.launch  robot_gmapping.launch  robot_pose_ekf.launch  save_map.launch
src/slam/rviz/: cartographer.rviz  gmapping.rviz
src/triwheel_robot_driver/: CMakeLists.txt  package.xml
src/triwheel_robot_driver/launch/: base_control.launch  cov.yaml  remote_control.launch  robot_driver.launch  robot_driver2.launch  simulation.launch
src/triwheel_robot_driver/launch/config/: cov.yaml
src/triwheel_robot_driver/scripts/: pathtest.py
src/triwheel_robot_driver/src/: README.md  robot_driver.cpp  robot_driver_backup.cpp  test.cpp
(+80 files in other folders)
